--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
 			<version>1.18.10</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.4.15</version>
+		</dependency>
+		<!-- Thanks for using https://jar-download.com -->
+
+
+
 	</dependencies>
 
 	<build>
